# power_monitoring

./: .gitignore  README.md
esp32_cam_monitor/: platformio.ini
esp32_cam_monitor/src/: main.cpp
webserver/: Dockerfile  app.py  predownload.py  pyproject.toml
