[tool.poetry]
name = "python-monitoring-server"
version = "0.1.0"
description = "Server to receive images from the esp32-cam."
authors = ["Florian Bergmann <bergmann.f@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
